# LittleMatchRepo

./: .gitignore  Update.bat  Update_Branch.bat  Update_Main.bat
Sage/: CMakeLists.txt  README.md  convert_relative.js  team_little_match_f24 - Shortcut.lnk
Sage/Batch Scripts/: Generate Solutions for VS 2019.bat  Generate Solutions for VS 2022 - CLEAN .bat  GenerateSln2022LOG.bat  GenerateSln2022VS.bat  RunCMAKEGenerator.bat  ascii.txt
Sage/BehaviourScripts/: CMakeLists.txt
Sage/BehaviourScripts/scripts/: Class1.cs  Component.cs  Entity.cs  GameObject.cs  GameplayBehaviour.cs  Input.cs  PlayerBehaviour.cs  RigidBody.cs  SageBehaviour.cs  SageDebug.cs  Transform.cs  Vector.cs  abc.cs
Sage/CoreComponents/SageLogic/include/: SageBindings.hpp  SageMonoManager.hpp  SageScriptCompiler.hpp  SageScriptLoader.hpp
Sage/CoreComponents/SageLogic/scripts/: Input.cs  SageEngineRT.csproj  abc.cs
Sage/CoreComponents/SageLogic/src/: SageMonoManager.cpp  SageScriptCompiler.cpp  SageScriptLoader.cpp  main.cpp
Sage/CoreComponents/SageMath_Lib/: Matrix4x4.h  SageMath_Lib.vcxproj  SageMath_Lib.vcxproj.filters  Vector2.cpp  Vector2.h  Vector3.h
Sage/CoreComponents/SageMath_Lib/include/: Matrix3x3.h  Matrix4x4.h  Shapes.h  Vector2.h  Vector3.h  Vector4.h
Sage/CoreComponents/SageMath_Lib/src/: Matrix3x3.cpp  Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  main.cpp
Sage/CoreComponents/SagePhysics_Lib/: SagePhysics_Lib.vcxproj
Sage/CoreComponents/SageTest/include/: Test.h
Sage/CoreComponents/SageUtility/src/: main.cpp
Sage/Physics/: SagePhysics.vcxproj
Sage/Physics/include/: PhysicsCollision.h
Sage/Physics/src/: PhysicsCollision.cpp
Sage/SageDebug/include/Profiler/: SageProfiler.hpp
Sage/SageDebug/src/: main.cpp
Sage/SageDebug/src/Profiler/: SageProfiler.cpp
Sage/SageEditor/config/: custom_layout.ini
Sage/SageEditor/data/configuration/: editor_config.json  project_config.json
Sage/SageEditor/data/serialization/: animations.csv  textures.csv
Sage/SageEditor/include/: EditorSceneManager.h  EditorStateManager.hpp  SageEditor.h  SageEditor.hpp  SageHierarchy.hpp  SageInspector.hpp  SageProject.h  SageProject.hpp  SageUIEditor.hpp
Sage/SageEditor/src/: EditorStateManager.cpp  SageEditor.cpp  SageHierarchy.cpp  SageInspector.cpp  SageProject.cpp  SageUIEditor.cpp  main.cpp
Sage/SageEngine/data/assets/: textures.csv
Sage/SageEngine/data/configuration/: project_config.json  window.json
Sage/SageEngine/data/levels/: level_1.csv
Sage/SageEngine/data/prefabs/: prefabs.csv
Sage/SageEngine/data/serialization/: animations.csv  prefabs.json  textures.csv
Sage/SageEngine/include/: AssetLoader.hpp  BindingSystem.hpp  Components.hpp  Components_LOCAL_500.hpp  EditorScene.hpp  Game.hpp  GameObject.hpp  GameObjects.hpp  GameObjects.hpp.orig  Main.h  MemLeakDetect.hpp  Prefabs.hpp  SageAudio.hpp  SageAudioFiles.hpp  SageEngine.hpp  SageSystemManager.hpp  Scene.hpp  SceneManager.hpp  ScriptInstance.hpp  SplashScreen.hpp
Sage/SageEngine/include/BehaviourComponent/: Player.hpp
Sage/SageEngine/include/Bindings/: Binding.hpp  BindingStruct.hpp  Bindings.hpp  DebugBinding.hpp  GameObjectBinding.hpp  RigidBodyBinding.hpp  TransformBinding.hpp
Sage/SageEngine/include/Components/: Animator.hpp  Audio.hpp  Behaviour.hpp  BoxCollider2D.hpp  BoxCollider2D.hpp.orig  Button.hpp  Component.hpp  Component.hpp.orig  Components.hpp  Image.hpp  Physics.hpp  RigidBody.hpp  ScriptableBehaviour.hpp  Slider.hpp  Sprite2D.hpp  Text.hpp  Transform.hpp  Transform.hpp.orig  UITransform.hpp
Sage/SageEngine/include/Systems/: SageGraphicsSystem.hpp  SagePhysicsSystem.hpp  SageScripting.hpp  System.hpp
Sage/SageEngine/src/: AssetLoader.cpp  Components.cpp  EditorScene.cpp  Game.cpp  Game.cpp.orig  GameObject.cpp  GameObjects.cpp  GameObjects.cpp.orig  Prefabs.cpp  SageAudio.cpp  SageEngine.cpp  SageSystemManager.cpp  Scene.cpp  SceneManager.cpp  SceneManager.cpp.orig  ScriptInstance.cpp  SplashScreen.cpp  main.cpp
Sage/SageGraphics/include/: Main.h  SageShader.hpp
Sage/SageGraphics/shaders/: BaseFragmentShader.glsl  BaseVertexShader.glsl  RectFragmentShaderBase.glsl  RectFragmentShaderGraph.dgsl  RectFragmentShaderInstance.glsl  RectVertexShaderInstance.glsl  TextFragmentShader.glsl  TextVertexShader.glsl
Sage/SageGraphics/src/: SageHelper.cpp  SageMain.cpp  SageModelManager.cpp  SageObject.cpp  SageObjectManager.cpp  SageRenderer.cpp  SageShader.cpp  SageShaderInternal.cpp  SageShaderManager.cpp  SageTexture.cpp  SageTextureInternal.cpp  SageViewport.cpp  SageWindowInternal.cpp  main.cpp
Sage/SageIO/data/: output.json  test_data.json  test_json_files.json
Sage/SageIO/include/: CSVParser.hpp
Sage/SageIO/src/: CSVParser.cpp  main.cpp
Sage/SageInput/include/: ClientPerson.hpp  KeyInputs.h  Key_Inputs.h
Sage/SageInput/src/: ClientPerson.cpp  GLFWHandler.cpp  InternalPerson.cpp  KeyInputs.cpp  Key_Inputs.cpp  SageInputPIML.cpp  glfw_handler.cpp  main.cpp
Sage/SageInputUnit/src/: test_main.cpp  test_pimpl_input.cpp
Sage/SageLite/include/: Main.h  SageHelper.hpp  SageMain.hpp  SageModel.hpp  SageModelManager.hpp  SageObjectManager.hpp  SageShader.hpp  SageWindow.hpp
Sage/SageLite/shaders/: BaseFragmentShader.glsl  BaseVertexShader.glsl
Sage/SageLite/src/: SageModel.cpp  SageModelManager.cpp  SageObject.cpp  SageObjectManager.cpp  SageRenderer.cpp  SageShaderManager.cpp  SageViewport.cpp  main.cpp
Sage/SageLogic/include/: SageAssembler.hpp  SageScriptCompiler.hpp
Sage/SageLogic/programs/: dynamic_helloT00.cs
Sage/SageLogic/scripts/: Input.cs  abc.cs  abc3.cs  hello2.cs
Sage/SageLogic/src/: SageAssembler.cpp  SageScriptCompiler.cpp  SageScriptLoader.cpp  main.cpp
Sage/SagePhysics/: PhysicsBody.cpp  PhysicsBody.h  PhysicsCollision.cpp  PhysicsCollision.h  PhysicsContact.cpp  PhysicsContact.h  PhysicsShape.cpp  PhysicsShape.h  SagePhysics.vcxproj  SagePhysics.vcxproj.filters  Vector2D.cpp  Vector2D.h
Sage/SagePhysics/include/: PhysicsCollision.h
Sage/cmake/: GenerateCore.cmake  GenerateCoreComponents.cmake  ImportDependencies.cmake  UnitTest.cmake
(+131 files in other folders)
